[package]
name = "cov-mark"
version = "1.1.0"
authors = [
    "Aleksey Kladov <aleksey.kladov@gmail.com>",
    "Simonas Kazlauskas <cov-mark@kazlauskas.me>"
]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Manual coverage marks."
repository = "https://github.com/matklad/cov-mark"
documentation = "https://docs.rs/cov-mark"

keywords = ["coverage", "test"]
categories = ["development-tools"]

[features]
# Thread-local support enables more precise hit marks (no more false positives) and also allows for
# an exact number of hits to be checked for (the `check_exact!` macro).
thread-local = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly_docs"]
