[package]
name = "cov-mark"
version = "2.0.0-pre.1"
authors = [
    "Aleksey Kladov <aleksey.kladov@gmail.com>",
    "Simonas Kazlauskas <cov-mark@kazlauskas.me>"
]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Manual coverage marks."
repository = "https://github.com/matklad/cov-mark"
documentation = "https://docs.rs/cov-mark"

keywords = ["coverage", "test"]
categories = ["development-tools"]

[features]
default = [ "enable" ]
enable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly_docs"]
