[package]
name = "cov-mark"
version = "2.1.0"
description = "Manual coverage marks."
keywords = ["coverage", "test"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/cov-mark"
documentation = "https://docs.rs/cov-mark"
authors = [
    "Aleksey Kladov <aleksey.kladov@gmail.com>",
    "Simonas Kazlauskas <cov-mark@kazlauskas.me>"
]
edition = "2021"
rust-version = "1.63"

exclude = [".github/", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[features]
default = ["enable"]
enable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly_docs"]
